# monarch

./: .gitignore  Dockerfile.nightly  pyproject.toml  setup.py
.github/workflows/: build-cpu.yml  build-cuda.yml  build-dist.yml  docker-builds.yml  test-cpu-arm64-rust.yml  test-gpu-python.yml  wheels.yml
build_utils/src/: lib.rs
docs/source/: actors.md
examples/: distributed_telemetry.py
examples/kubernetes/hello_kubernetes_job/: README.md  hello_kubernetes_job.py
examples/kubernetes/hello_kubernetes_job/manifests/: hello_provision.yaml
hyperactor/src/: mailbox.rs
hyperactor_mesh/src/: actor_mesh.rs  host_mesh.rs  mesh_admin.rs  mesh_agent.rs  mesh_controller.rs  proc_mesh.rs  resource.rs
hyperactor_mesh/src/host_mesh/: host_agent.rs
hyperactor_telemetry/: Cargo.toml
monarch_dashboard/frontend/src/: App.css  App.tsx
monarch_dashboard/server/: db.py
monarch_extension/: Cargo.toml
monarch_extension/src/: lib.rs
monarch_hyperactor/src/: actor.rs  host_mesh.rs
monarch_messages/: Cargo.toml
monarch_messages/src/: lib.rs
monarch_rdma/: Cargo.toml
monarch_rdma/extension/: lib.rs
monarch_rdma/src/: lib.rs
monarch_tensor_worker/src/: lib.rs
nccl-sys/: Cargo.toml  build.rs
nccl-sys/src/: lib.rs
python/monarch/actor/: concurrent.py
python/monarch/job/: kubernetes.py
python/tests/: conftest.py  test_actor_error.py  test_concurrent_endpoints.py  test_debugger.py  test_python_actors.py
rdmaxcel-sys/: Cargo.toml  build.rs
rdmaxcel-sys/src/: lib.rs
scripts/: common-setup.sh
torch-sys-cuda/: build.rs
torch-sys-cuda/src/: lib.rs
(+10 files in other folders)
